# Rust_Discord_Bot

./: Cargo.toml  README.md  src
src/commands/: other.rs
src/handlers/: event_handler.rs  framework.rs
src/structures/: cmd_data.rs  commands.rs
